Fix leaflet import and satelite map breaking on application

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "chart.js": "^4.5.1",
     "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
-    "leaflet": "^1.9.4",
+    "leaflet": "1.9.4",
     "leaflet-geosearch": "3.6.1",
     "leaflet.fullscreen": "3.0.1",
     "moment": "^2.30.1",
@@ -45,7 +45,7 @@
     "ngx-cookie-service": "^20.1.0",
     "ngx-monaco-editor-v2": "^20.3.0",
     "ngx-papaparse": "^8.0.0",
-    "proj4": "2.12.1",
+    "proj4": "2.20.2",
     "proj4leaflet": "1.0.2",
     "rxjs": "^7.8.2",
     "tslib": "^2.8.1",
@@ -63,8 +63,8 @@
     "@types/leaflet.fullscreen": "^3.0.3",
     "@types/leaflet.markercluster": "1.5.3",
     "@types/node": "^24.9.1",
-    "@types/proj4": "2.5.5",
-    "@types/proj4leaflet": "1.0.10",
+    "@types/proj4": "2.19.0",
+    "@types/proj4leaflet": "1.0.12",
     "eslint": "^9.38.0",
     "jasmine-core": "^5.12.0",
     "jasmine-spec-reporter": "~7.0.0",
